# rfb-cnpj-metadata

./: README.md  pyproject.toml  run.py
metadata/auxiliary-tables/: cnaes.json  motivos.json  municipios.json  naturezas.json  paises.json  qualificacoes.json
metadata/datasets/: empresas.json  estabelecimentos.json  simples.json  socios.json
metadata/docs/: cnpj-metadados.json  layout-dados-abertos-cnpj.json
metadata/tax-regimes/: imunes-isentas.json  leiaute-dos-arquivos.json  lucro-arbitrado.json  lucro-presumido.json  lucro-real.json
src/rfb_cnpj_metadata/: __init__.py  constants.py  fetcher.py
