[project]
name = "rfb-cnpj-metadata"
version = "0.1.0"
description = "Collect raw data files' metadata from Receita Federal do Brasil's CNPJ database."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
